.provarCaches/00D5f000005vwGkEAI/objects/rstk__icconclass__c.object
<CustomObject>
    <description>icconclass__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icconclass_div__r.rstk__externalid__c + &apos;_&apos; +  rstk__icconclass_class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__icconclass_class__c + &apos;(&apos; + rstk__icconclass_desc__c + &apos;)&apos;, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record and is not displayed in the User interface.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icconclass_class__c</fullName>
        <inlineHelpText>User defined id of the Container Class. Up to 20 characters in length.</inlineHelpText>
        <label>Inventory Container Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icconclass_desc__c</fullName>
        <inlineHelpText>User defined description of the Container Class. Up to 80 characters in length.</inlineHelpText>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icconclass_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the specific Division that this Inventory Container Class is associated with.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Inventory Container Classes</relationshipLabel>
        <relationshipName>icconclasses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icconclass_itemreqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When set, all Inventory Containers created using this Container Class will be Item specific and only allow one Item as defined on the Container. Values set on the Container created can be overridden.</inlineHelpText>
        <label>Container is Item Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icconclass_locidreqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When set, all Inventory Containers created using this Container Class will be Location ID specific and only allow Inventory associated with the Location ID defined on the Container. Values set on the Container created can be overridden.</inlineHelpText>
        <label>Container is Location ID Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icconclass_locnumreqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When set, all Inventory Containers created using this Container Class will be Location Number specific and only allow Inventory associated with the Location Number defined on the Container. Values set on the Container created can be overridden.</inlineHelpText>
        <label>Container is Location Number Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icconclass_maxnetweight__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the default Max Net Weight that will be set on the Inventory Containers created using this Container Class. Values set on the Container created can be overridden.</inlineHelpText>
        <label>Max Net Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icconclass_prefix__c</fullName>
        <inlineHelpText>Used to define a prefix against Containters created using this Container Class. Up to 6 characters in length.</inlineHelpText>
        <label>Inventory Container Prefix</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icconclass_projreqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When set, all Inventory Containers created using this Container Class will be Project specific and only allow Inventory associated with the Project defined on the Container. Values set on the Container created can be overridden.</inlineHelpText>
        <label>Container is Project Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icconclass_sitereqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When set, all Inventory Containers created using this Container Class will be Project specific and only allow Inventory associated with the Site defined on the Container. Values set on the Container created can be overridden.</inlineHelpText>
        <label>Container is Site Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icconclass_socontype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set in a Container Class, upon creating a SO Container during SO Fulfillment (Pack), the Container Class that is set against the Inventory Containers used in the Pack process will determine the SO Container type for the new SO Container.</inlineHelpText>
        <label>Associated Sales Container Type</label>
        <referenceTo>rstk__socontype__c</referenceTo>
        <relationshipLabel>Inventory Container Classes</relationshipLabel>
        <relationshipName>icconclasses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icconclass_tareweight__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The default Tare Weight that will be set on the Inventory Containers created using this Container Class. Values set on the Container created can be overridden.</inlineHelpText>
        <label>Container Tare Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <externalId>true</externalId>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inventory Container Class</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__icconclass_div__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstk__icconclass_class__c</columns>
        <columns>rstk__icconclass_itemreqd__c</columns>
        <columns>rstk__icconclass_locnumreqd__c</columns>
        <columns>rstk__icconclass_projreqd__c</columns>
        <columns>rstk__icconclass_sitereqd__c</columns>
        <columns>rstk__icconclass_prefix__c</columns>
        <columns>rstk__icconclass_tareweight__c</columns>
        <columns>rstk__icconclass_socontype__c</columns>
        <columns>rstk__icconclass_locidreqd__c</columns>
        <columns>rstk__icconclass_maxnetweight__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_LPN_Inventory_Container_Class</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstk__icconclass_class__c</columns>
        <columns>rstk__icconclass_desc__c</columns>
        <columns>rstk__icconclass_div__c</columns>
        <columns>rstk__icconclass_itemreqd__c</columns>
        <columns>rstk__icconclass_locnumreqd__c</columns>
        <columns>rstk__icconclass_projreqd__c</columns>
        <columns>rstk__icconclass_sitereqd__c</columns>
        <columns>rstk__icconclass_prefix__c</columns>
        <columns>rstk__icconclass_tareweight__c</columns>
        <columns>rstk__icconclass_socontype__c</columns>
        <columns>rstk__icconclass_locidreqd__c</columns>
        <filterScope>Everything</filterScope>
        <label>Inventory Container Class (LPN)</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Container Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Validate_Container_Type_Company</fullName>
        <active>true</active>
        <description>Container Type Company must match Divisions Company</description>
        <errorConditionFormula>rstk__icconclass_socontype__c != null &amp;&amp; rstk__icconclass_socontype__r.rstk__socontype_div__r.rstk__sydiv_cmpno__c !=  rstk__icconclass_div__r.rstk__sydiv_cmpno__c</errorConditionFormula>
        <errorMessage>Container Type Company must match Divisions Company</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Container_is_Location_ID</fullName>
        <active>true</active>
        <description>Container is Location ID Specific cannot be set unless Container is Site Specific is set</description>
        <errorConditionFormula>rstk__icconclass_locidreqd__c = true &amp;&amp; rstk__icconclass_sitereqd__c = false</errorConditionFormula>
        <errorMessage>Container is Location ID Specific cannot be set unless Container is Site Specific is set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Container_is_Location_Number</fullName>
        <active>true</active>
        <description>Container is Location Number Specific cannot be set unless Container is Location ID Specific is set</description>
        <errorConditionFormula>rstk__icconclass_locnumreqd__c = true &amp;&amp;  rstk__icconclass_locidreqd__c = false</errorConditionFormula>
        <errorMessage>Container is Location Number Specific cannot be set unless Container is Location ID Specific is set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Max_Net_Weight</fullName>
        <active>true</active>
        <description>Max Net Weight cannot be less than 0</description>
        <errorConditionFormula>rstk__icconclass_maxnetweight__c &lt; 0</errorConditionFormula>
        <errorMessage>Max Net Weight cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Tare_Weight</fullName>
        <active>true</active>
        <description>Container Tare Weight cannot be less than 0</description>
        <errorConditionFormula>rstk__icconclass_tareweight__c &lt; 0</errorConditionFormula>
        <errorMessage>Container Tare Weight cannot be less than 0</errorMessage>
    </validationRules>
</CustomObject>